# drf-auth

./: db.sqlite3  docker-compose.yml  pyproject.toml
recipes/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_rename_admitted_by_recipe_added_by.py
recipes_project/: settings.py  urls.py
